<resources>
    <string name="app_name">WalletScan</string>
    <string name="send_otp">Send OTP</string>
    <string name="phone_number">Phone number</string>
    <string name="sms_charges_note">WalletScan will send an SMS message (carrier charges may apply) to verify your phone number</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_the_6_digit_verification_code_sent_as_an_sms_to">Enter the 6-digit verification code sent as an SMS to </string>
    <string name="verify_text">Verify </string>
    <string name="profile_info">Profile Info</string>
    <string name="write_a_short_bio">Write a short bio (optional)</string>
    <string name="walletscan_icon">WalletScan Icon</string>
    <string name="your_name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="signingup">Signing up..</string>
    <string name="short_name">Short Name</string>
    <string name="my_profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="give_your_feedback_here">Give your feedback here</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you">You:&#160;</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="search">Search…</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="back_button">Back Button</string>
    <string name="cancel">Cancel</string>
    <string name="my_wallets">My Wallets</string>
    <string name="name_of_wallet">Name of wallet</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="max_desc_text_length">800</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_wallets_to_show">No wallets to show.</string>
    <string name="current_balance">Current balance</string>
    <string name="no_records_found">No records found.</string>
    <string name="deduct_money">Deduct Money</string>
    <string name="add_money">Add Money</string>
    <string name="visual">Visual</string>
    <string name="history">History</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="purpose">Purpose (optional)</string>
    <string name="amount">Amount</string>
    <string name="purpose_text">Purpose</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ending_balance">Ending balance</string>
    <string name="starting_balance">Starting balance</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="about_wallet">About wallet</string>
    <string name="delete_wallet">Delete wallet (Cannot be undone)</string>
    <string name="transaction_date">Transaction date</string>
    <string name="transaction_time">Transaction time</string>
    <string name="current_date_and_time">Current date and time</string>
    <string name="amount_deducted">Amount deducted</string>
    <string name="amount_added">Amount added</string>
    <string name="select_date_range">Select date range</string>
    <string name="yes">Yes</string>
    <string name="detail_history">Detail History</string>
    <string name="not_recovered">Not Recovered</string>
    <string name="not_returned">Not Returned</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="clear_filter">Clear Filter</string>
</resources>