<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_a_short_bio"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/txtSave"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />

    </RelativeLayout>
</LinearLayout>
