<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.VerifyOTP">

    <ProgressBar
        android:id="@+id/progress_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_padding">

            <TextView
                android:id="@+id/txtVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/verify_text"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/primary_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_component_distance"
                android:gravity="center_horizontal"
                android:text="@string/enter_the_6_digit_verification_code_sent_as_an_sms_to"
                android:textColor="@color/greyColor"
                android:textSize="@dimen/secondary_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/high_component_distance"
                android:hint="@string/verification_code"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="1dp"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/high_component_distance">

                <TextView
                    android:id="@+id/txtResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:text="@string/resend_code"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/secondary_text_size"
                    app:drawableStartCompat="@drawable/message" />

                <TextView
                    android:id="@+id/txtTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:textColor="@color/greyColor"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>